--- a/videos.html
+++ b/videos.html
@@ -22,5 +22,8 @@
 			<!-- Videos are lazily loaded here -->
 		</div>
 	</div>
+	<div id="loading-wheel">
+		<img class="hidden" src="<?php echo get_stylesheet_directory_uri(); ?>/images/spin.gif" />
+	</div>
 </body>
 </html>
